examples/test/testpolicy8496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8496
  namespace: namespace202
spec:
  podSelector:
    matchLabels:
      key31: value16
      key35: value0
      key15: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value33
      podSelector:
        matchLabels:
          key0: value10
          key7: value28
